Document the platform work and the surfaces that only exist off macOS
ARCHITECTURE gets the font pin in the switch sequence, an EnvironmentProbe
section, and three gotchas: the font that changed on every toggle, the
launcher-owned --add-opens, and why the scaling property's justification
is a macOS one that stays put until a Linux log says otherwise. The
macOS title-bar step now says it is a no-op elsewhere, by decision.

The QA checklist gets an OS column on the runs table, rows for the
in-window menu bar, the Swing file chooser and the native frame — the
first two unchecked because on macOS they do not exist — and an
"everything, on Windows and Linux" line in the gaps table so nobody reads
the green harness as a visual sweep.

README says the same in user terms, and where the env: block is.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>